<?xml version="1.0" encoding="utf-8"?>

<resources>
<string name="app_name">The Ur-Quan Masters Live Wallpaper</string>
<string name="app_desc">Animations from The Ur-Quan Masters</string>
<string name="preferences_label">Settings</string>
<string name="app_settings">The Ur-Quan Masters Live Wallpaper Settings</string>
<string name="app_author">Nicolas Simonds</string>
<string name="fetch_content_hdr">Notice</string>
<string name="fetch_content">
Due to U.S. Copyright restrictions, the content pack used by this
software cannot be distributed with it, and must be obtained separately.

To download the content pack, link here:
http://prdownloads.sourceforge.net/sc2/uqm-0.6.0-content.uqm?download

Then click "OK" to locate the content pack on your SD card
</string>
<string name="no_content1">No content pack selected.</string>
<string name="no_content2">Please select a content pack from the Settings menu</string>
<string name="filechooser_error_hdr">Error</string>
<string name="filechooser_error">Cannot browse to directory</string>
<string name="filechooser_error_badcontent">is not a valid content pack</string>
<string name="content_pack_title">Content Pack</string>
<string name="content_pack_summary">Location of the content pack from The Ur-Quan Masters</string>
<string name="alien_title">Alien</string>
<string name="alien_summary">Choose the alien to display</string>
<string name="scaling_title">Scale Wallpaper</string>
<string name="version_title">Application Version</string>
</resources>
