<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
		android:title="@string/app_settings">
	<Preference
			android:title="@string/content_pack_title"
			android:summary="@string/content_pack_summary"
			android:key="contentPack"
	/>
	<ListPreference
			android:dependency="contentPack"
			android:title="@string/alien_title"
			android:summary="@string/alien_summary"
			android:key="race"
			android:entries="@array/racesNames"
			android:entryValues="@array/races"
	/>
	<ListPreference
			android:title="@string/scaling_title"
			android:key="scaling"
			android:entries="@array/scalingDesc"
			android:defaultValue="2"
			android:entryValues="@array/scaling"
	/>
	<Preference
			android:title="@string/version_title"
			android:key="version"
	/>
<!-- 
	<net.submedia.android.uqmwallpaper.SeekBarPreference
            android:id="@+id/seekbar"
			android:key="frameRate"
            android:max="40"
            android:progress="40"
			android:title="Frame Rate" />
-->
</PreferenceScreen>
